# scribeflow

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  drizzle.config.ts  package.json
api/drizzle/: 0000_needy_queen_noir.sql  0001_cynical_monster_badoon.sql  0002_chemical_polaris.sql  0003_salty_exiles.sql  0004_even_tinkerer.sql  0005_sharp_wither.sql  0006_phase3b_embeddings_followups_nudges.sql  0007_green_lady_vermin.sql
api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
api/src/: app.test.ts  app.ts  config.ts  index.ts
api/src/db/: client.ts  migrate.ts  schema.ts  util.ts
api/src/db/repositories/: actionItems.ts  followups.ts  meetings.ts  retrieval.ts  segments.ts  speakers.ts  summaries.ts  tenants.ts  users.ts
api/src/lib/: chat.ts  cors.ts  email.ts  embeddings.ts  followup.test.ts  followup.ts  r2.ts  sse.ts
api/src/plugins/: auth.ts  config.ts  db.ts  events.ts  queue.ts  tenant.ts
api/src/queue/: messages.ts  topology.ts
api/src/routes/: auth.ts  chat.test.ts  chat.ts  health.ts  me.ts  meetings.test.ts  meetings.ts
api/src/types/: fastify.d.ts
bot/: .env.example  Dockerfile  README.md  entrypoint.sh  orchestrator.Dockerfile  package.json  vitest.config.ts
bot/src/: capture.ts  config.ts  controlPlaneClient.ts  joinFlow.ts  launchProfile.ts  lifecycle.ts  logging.ts  main.ts  selectors.ts  state.ts
bot/src/orchestrator/: config.ts  controlPlaneServer.ts  db.ts  docker.ts  index.ts  messages.ts  queue.ts  r2.ts  reaper.ts  sessionRegistry.ts  spawn.ts
bot/tests/: capture.test.ts  controlPlaneClient.test.ts  joinFlow.test.ts  launchProfile.test.ts  lifecycle.test.ts  mockPage.ts
bot/tests/fixtures/: mockMeet.html
bot/tests/orchestrator/: controlPlaneServer.test.ts  fakes.ts  reaper.test.ts  spawn.test.ts  testEnv.ts
docs/: architecture.md  decisions.md  infrastructure.md  meet-bot.md  model-strategy.md  oracle-vm-setup.md  plan.md
infra/: .env.example  README.md  compose.yml
infra/caddy/: Caddyfile
web/: package.json  tsconfig.json
web/src/: App.tsx  api.ts  main.tsx
web/src/components/: SpeakerName.tsx  StatusBadge.tsx
web/src/pages/: ActionItemsPage.tsx  AuthPage.tsx  ChatPage.tsx  MeetingDetailPage.tsx  MeetingsPage.tsx
workers/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
workers/scribeflow_workers/: chunking.py  config.py  db.py  diarize_backends.py  diarizer.py  embed_backends.py  embedder.py  extract_backends.py  extractor.py  framework.py  logging.py  media.py  merge.py  messages.py  nudge_backends.py  nudger.py  r2.py  rate_limiter.py  slicer.py  stitcher.py  topology.py  transcribe_backends.py  transcriber.py
workers/tests/: test_chaos.py  test_chunking.py  test_diarizer.py  test_embedder.py  test_extract_backends.py  test_extractor.py  test_finalize.py  test_framework.py  test_merge.py  test_nudger.py  test_slicer.py  test_stitcher.py  test_topology.py  test_transcribe_backends.py  test_transcriber.py
workers/tests/fixtures/: groq_verbose_json.json
