[project]
name = "scribeflow-workers"
version = "0.0.0"
description = "Async pipeline workers: slicer, transcriber, diarizer, stitcher, extractor, embedder"
requires-python = ">=3.12"
dependencies = [
    "pika>=1.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "groq>=0.15",
]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.8", "mypy>=1.14"]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.mypy]
strict = true

# pika and boto3 ship no type information; their surface in this codebase is
# wrapped in typed helpers (framework.py, r2.py) so Any stops there.
[[tool.mypy.overrides]]
module = ["pika", "pika.*", "boto3", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scribeflow_workers"]

[project.scripts]
transcriber = "scribeflow_workers.transcriber:main"
